[metadata]
name = pika-stubs
version = 0.1.1
license = MIT
author = Chi-En Wu
author_email = jason.wu@hahow.in
description = Mypy plugin and stubs for Pika
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/hahow/pika-stubs
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
install_requires =
